force-app/main/default/objects/User/fields/approvers__c.field-meta.xml
<CustomField>
    <fullName>approvers__c</fullName>
    <label>Approvers</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>