force-app/main/default/objects/User/fields/Bypass_Automation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by only System Admin who wants to by pass Automation &amp; Validation rules.</description>
    <inlineHelpText>This field is used by only System Admin who wants to by pass Automation &amp; Validation rules.</inlineHelpText>
    <label>Bypass Automation</label>
    <type>Checkbox</type>
</CustomField>