force-app/main/default/objects/User/fields/Conga_user__c.field-meta.xml
<CustomField>
    <fullName>Conga_user__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>checked if the user has access to Conga and needs to see it.</inlineHelpText>
    <label>Conga user</label>
    <type>Checkbox</type>
</CustomField>