force-app/main/default/objects/User/fields/Dish_User__c.field-meta.xml
<CustomField>
    <fullName>Dish_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>VERY restricted access</inlineHelpText>
    <label>Dish User</label>
    <type>Checkbox</type>
</CustomField>