force-app/main/default/objects/User/fields/NT_ID__c.field-meta.xml
<CustomField>
    <fullName>NT_ID__c</fullName>
    <inlineHelpText>T-Mobile NT ID</inlineHelpText>
    <label>NT ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>