force-app/main/default/objects/User/fields/Spectrum_internal_User__c.field-meta.xml
<CustomField>
    <fullName>Spectrum_internal_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to track Spectrum Clearing Internal users easier to see in list views.</inlineHelpText>
    <label>Spectrum internal User</label>
    <type>Checkbox</type>
</CustomField>