force-app/main/default/objects/User/fields/Taskray_User__c.field-meta.xml
<CustomField>
    <fullName>Taskray_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to show components on Home page/record page to Taskray users (only). Not used for any thing on the user profile except showing taskray licenses.</inlineHelpText>
    <label>Taskray User</label>
    <type>Checkbox</type>
</CustomField>